# bcc-wallet-legacy

./: LICENSE  Makefile  README.md  bcc-sl.yaml  bcc-wallet.cabal  default.nix  release.nix  stack-local.yaml  stack.yaml
app/generate-swagger/: Main.hs  README.md
app/server/: Main.hs
nix/: .stack-pkgs.nix  README.md  pkgs.nix  stack-shell.nix  tags.b6j95n  tbco-nix.json
nix/.stack.nix/: acid-state-exts.nix  bcc-crypto.nix  bcc-report-server.nix  bcc-sl-binary-test.nix  bcc-sl-binary.nix  bcc-sl-chain-test.nix  bcc-sl-chain.nix  bcc-sl-client.nix  bcc-sl-cluster.nix  bcc-sl-core-test.nix  bcc-sl-core.nix  bcc-sl-crypto-test.nix  bcc-sl-crypto.nix  bcc-sl-db.nix  bcc-sl-infra.nix  bcc-sl-mnemonic.nix  bcc-sl-networking.nix  bcc-sl-node-ipc.nix  bcc-sl-node.nix  bcc-sl-util-test.nix  bcc-sl-util.nix  bcc-sl-utxo.nix  bcc-sl-x509.nix  bcc-sl.nix  bcc-wallet.nix  canonical-json.nix  engine-io-wai.nix  engine-io.nix  hedgehog.nix  log-warper.nix  rocksdb-haskell-ng.nix  serokell-util.nix  socket-io.nix  stylish-haskell.nix  universum.nix  zerepoch-prototype.nix
src/Bcc/Wallet/: API.hs  Action.hs  Client.hs  Kernel.hs  NodeProxy.hs  Server.hs  TypeLits.hs  Util.hs  WalletLayer.hs
src/Bcc/Wallet/API/: Indices.hs  Internal.hs  Request.hs  Response.hs  Types.hs  V1.hs
src/Bcc/Wallet/API/Internal/: Handlers.hs
src/Bcc/Wallet/API/Request/: Filter.hs  Pagination.hs  Parameters.hs  Sort.hs
src/Bcc/Wallet/API/Response/: JSend.hs
src/Bcc/Wallet/API/Response/Filter/: IxSet.hs
src/Bcc/Wallet/API/Response/Sort/: IxSet.hs
src/Bcc/Wallet/API/Types/: UnitOfMeasure.hs
src/Bcc/Wallet/API/V1/: Accounts.hs  Addresses.hs  Errors.hs  Generic.hs  Handlers.hs  Headers.hs  Info.hs  Parameters.hs  ReifyWalletError.hs  Settings.hs  Swagger.hs  Transactions.hs  Types.hs  Wallets.hs
src/Bcc/Wallet/API/V1/Handlers/: Accounts.hs  Addresses.hs  Info.hs  Settings.hs  Transactions.hs  Wallets.hs
src/Bcc/Wallet/API/V1/Swagger/: Example.hs
src/Bcc/Wallet/Client/: Http.hs
src/Bcc/Wallet/Kernel/: Accounts.hs  Actions.hs  AddressPool.hs  AddressPoolGap.hs  Addresses.hs  BListener.hs  CoinSelection.hs  Diffusion.hs  Ed25519Bip44.hs  Internal.hs  Invariants.hs  Keystore.hs  Migration.hs  Mode.hs  NodeStateAdaptor.hs  Pending.hs  Prefiltering.hs  Read.hs  Restore.hs  Submission.hs  Transactions.hs  Types.hs  Wallets.hs
src/Bcc/Wallet/Kernel/CoinSelection/: FromGeneric.hs  Generic.hs
src/Bcc/Wallet/Kernel/CoinSelection/Generic/: Fees.hs  Grouped.hs  LargestFirst.hs  Random.hs
src/Bcc/Wallet/Kernel/DB/: AcidState.hs  BlockContext.hs  BlockMeta.hs  Compression.hs  HdRootId.hs  HdWallet.hs  InDb.hs  Read.hs  Resolved.hs  Spec.hs  Sqlite.hs  TxMeta.hs  Updates.hs
src/Bcc/Wallet/Kernel/DB/HdWallet/: Create.hs  Delete.hs  Derivation.hs  Read.hs  Update.hs
src/Bcc/Wallet/Kernel/DB/Spec/: Pending.hs  Read.hs  Update.hs
src/Bcc/Wallet/Kernel/DB/TxMeta/: Types.hs
src/Bcc/Wallet/Kernel/DB/Util/: AcidState.hs  IxSet.hs  Zoomable.hs
src/Bcc/Wallet/Kernel/Submission/: Worker.hs
src/Bcc/Wallet/Kernel/Util/: Core.hs  NonEmptyMap.hs  Strict.hs  StrictList.hs  StrictNonEmpty.hs  StrictStateT.hs
src/Bcc/Wallet/Server/: CLI.hs  Middlewares.hs  Plugins.hs
src/Bcc/Wallet/Server/Plugins/: AcidState.hs
src/Bcc/Wallet/Types/: UtxoStatistics.hs
src/Bcc/Wallet/WalletLayer/: ExecutionTimeLimit.hs  Kernel.hs
src/Bcc/Wallet/WalletLayer/Kernel/: Accounts.hs  Active.hs  Addresses.hs  Conv.hs  Internal.hs  Transactions.hs  Wallets.hs
test/integration/: Main.hs  README.md  configuration.yaml
test/integration/Test/Integration/: Documentation.hs
test/integration/Test/Integration/Framework/: Cluster.hs  DSL.hs  Request.hs
test/integration/Test/Integration/Scenario/: Accounts.hs  Addresses.hs  EosWallets.hs  Node.hs  Transactions.hs  Wallets.hs
test/manual/258/: scenarios.md
test/manual/scripts/: generate-addresses.sh
test/nightly/: TxMetaStorage.hs
test/unit/: Arbitrary.hs  Main.hs
test/unit/API/: MarshallingSpec.hs  RequestSpec.hs  SwaggerSpec.hs
test/unit/Golden/: APILayout.hs  APIV1Types.hs  Ed25519Addresses.hs  WalletError.hs
test/unit/Golden/golden/apiV1Types/json/: SoftwareVersion
test/unit/InputSelection/: Evaluation.hs  FromGeneric.hs  SortedUtxo.hs  TxStats.hs
test/unit/InputSelection/Evaluation/: Events.hs  Generic.hs
test/unit/Test/Infrastructure/: Generator.hs  Genesis.hs
test/unit/Test/Spec/: Accounts.hs  AddressPool.hs  AddressPoolGap.hs  Addresses.hs  BlockMetaScenarios.hs  CoinSelection.hs  DeltaCompression.hs  Ed25519Bip44.hs  Fixture.hs  GetTransactions.hs  Kernel.hs  Keystore.hs  Models.hs  NewPayment.hs  Submission.hs  Translation.hs  TxMetaScenarios.hs  TxMetaStorage.hs  WalletWorker.hs  Wallets.hs
test/unit/Test/Spec/CoinSelection/: Generators.hs
test/unit/UTxO/ToBcc/: Interpreter.hs
test/unit/Util/: GenHash.hs  Prefiltering.hs
test/unit/Util/Buildable/: Hspec.hs
test/unit/Wallet/Inductive/: Bcc.hs  ExtWalletEvent.hs
